{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 9,
  "lineage": "8b4e67bf-1165-f700-390e-173e1ad6fbf0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:vpc/vpc-0acbcba75ee7d87e4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-068b5ec74d5e68f2c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02bcd1b8e4d53083b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acbcba75ee7d87e4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06125ac57aa5111b7",
            "owner_id": "851725259254",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:vpc/vpc-0acbcba75ee7d87e4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-068b5ec74d5e68f2c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02bcd1b8e4d53083b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acbcba75ee7d87e4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06125ac57aa5111b7",
            "owner_id": "851725259254",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ca688f4217aab61b",
            "arn": "arn:aws:ec2:us-east-1:851725259254:instance/i-0d47eabdff1825120",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d47eabdff1825120",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f91d24547c1a5c42"
              }
            ],
            "primary_network_interface_id": "eni-0f91d24547c1a5c42",
            "private_dns": "ip-172-31-16-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.9",
            "public_dns": "ec2-54-91-170-45.compute-1.amazonaws.com",
            "public_ip": "54.91.170.45",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0916ce03c3e0c044c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sf-privateconnect2-web-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd9f12d55ce6c096",
            "tags": {
              "Name": "sf-privateconnect2-web"
            },
            "tags_all": {
              "Name": "sf-privateconnect2-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b780f68142452a43"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.selected",
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725259254:loadbalancer/net/sf-privateconnect2-nlb/70e5e64768dc4d05",
            "arn_suffix": "net/sf-privateconnect2-nlb/70e5e64768dc4d05",
            "dns_name": "sf-privateconnect2-nlb-70e5e64768dc4d05.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725259254:loadbalancer/net/sf-privateconnect2-nlb/70e5e64768dc4d05",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sf-privateconnect2-nlb",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027373abf8c2eab3e"
              },
              {
                "subnet_id": "subnet-043b35417a862f578"
              },
              {
                "subnet_id": "subnet-0af9b735845d484d2"
              },
              {
                "subnet_id": "subnet-0cb73d7dfd86d6a8d"
              },
              {
                "subnet_id": "subnet-0cd9f12d55ce6c096"
              },
              {
                "subnet_id": "subnet-0dc104fbc5919c83d"
              }
            ],
            "subnets": [
              "subnet-027373abf8c2eab3e",
              "subnet-043b35417a862f578",
              "subnet-0af9b735845d484d2",
              "subnet-0cb73d7dfd86d6a8d",
              "subnet-0cd9f12d55ce6c096",
              "subnet-0dc104fbc5919c83d"
            ],
            "tags": {
              "Name": "sf-privateconnect2-nlb"
            },
            "tags_all": {
              "Name": "sf-privateconnect2-nlb"
            },
            "vpc_id": "vpc-0acbcba75ee7d87e4",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "data.aws_subnets.selected",
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725259254:listener/net/sf-privateconnect2-nlb/70e5e64768dc4d05/a7ad505a6d8533c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725259254:targetgroup/sf-privateconnect2-tg/22a43669fd7c959b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725259254:listener/net/sf-privateconnect2-nlb/70e5e64768dc4d05/a7ad505a6d8533c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725259254:loadbalancer/net/sf-privateconnect2-nlb/70e5e64768dc4d05",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.tg",
            "data.aws_subnets.selected",
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725259254:targetgroup/sf-privateconnect2-tg/22a43669fd7c959b",
            "arn_suffix": "targetgroup/sf-privateconnect2-tg/22a43669fd7c959b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725259254:targetgroup/sf-privateconnect2-tg/22a43669fd7c959b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:851725259254:loadbalancer/net/sf-privateconnect2-nlb/70e5e64768dc4d05"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sf-privateconnect2-tg",
            "port": 80,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sf-privateconnect2-tg"
            },
            "tags_all": {
              "Name": "sf-privateconnect2-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0acbcba75ee7d87e4"
          },
          "dependencies": [
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725259254:targetgroup/sf-privateconnect2-tg/22a43669fd7c959b-20260106040825631800000002",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725259254:targetgroup/sf-privateconnect2-tg/22a43669fd7c959b",
            "target_id": "172.31.16.9"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_security_group.web_sg",
            "data.aws_ami.al2023",
            "data.aws_subnets.selected",
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725259254:security-group/sg-0b780f68142452a43",
            "description": "Allow HTTP inbound for POC web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b780f68142452a43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sf-privateconnect2-web-sg",
            "name_prefix": "",
            "owner_id": "851725259254",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sf-privateconnect2-web-sg"
            },
            "tags_all": {
              "Name": "sf-privateconnect2-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acbcba75ee7d87e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}